Fix images in chat overflowing outside chat window.

--- a/app/assets/stylesheets/chat.scss
+++ b/app/assets/stylesheets/chat.scss
@@ -1079,6 +1079,8 @@
       #0a0a0a
     );
   }
+
+  img { max-width: 100%; }
 }
 
 .chatmessagebody__currentuser {
